# governance-building

./: README.md  docker-compose.yml
base/: schema.md
base/dashboard/: package-lock.json  vite.config.ts
base/dashboard/src/: App.tsx  api.ts  index.css
base/server/: Cargo.toml  Dockerfile
base/server/migrations/: 001_extensions.sql  002_core_entities.sql  003_alarm_tables.sql  004_operational_tables.sql  005_tenant_billing.sql  006_industry_extras.sql  007_timescale.sql  008_building_profiles.sql  009_indexes.sql  010_seed_data.sql  011_office_hvac_seed.sql
base/server/scripts/: run-migrations.sh
base/server/src/: lib.rs  main.rs
base/server/src/alarm/: mod.rs
base/server/src/api/: handlers.rs  mod.rs  routes.rs  state.rs
base/server/src/config/: mod.rs
base/server/src/db/: mod.rs
base/server/src/models/: entities.rs  enums.rs  mod.rs
base/server/src/mqtt/: mod.rs
containers/data-center/: scenario.md
containers/hospital/: scenario.md
containers/hotel/: scenario.md
containers/office-hvac/: scenario.md
containers/shopping-mall/: scenario.md
docs/: building-operations-complete.docx  building-operations-extra-dimensions.md  building-operations-overview.md  building-subtypes-deep-dive.md
